# backend_neo

./: README.md  beispiel.py  docker-compose.yaml  response.json  test.json  testmqtt.py
Info/: INFO.md
datacenter/: .env  Cargo.toml  docker-compose.yaml
datacenter/src/: auth.rs  command_handler.rs  db.rs  json_handler.rs  main.rs  mqtt_handler.rs  query.rs
mqtt-broker/: .env  docker-compose.yaml
mqtt-broker/mosquitto/config/: mosquitto.conf  pwfile
neo4j/: Dockerfile
