[package]
name = "datacenter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
neo4rs = "0.8.0"
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11.5"
rumqttc = "0.12.0"